[tool.poetry]
name = "decision-transformer"
version = "0.1.0"
description = ""
authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
readme = "README.md"
packages = [{include = "decision_transformer"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
